.apex/unpackaged/objects/ImportDemoObj__c.object
<CustomObject>
    <fields>
        <fullName>Require1__c</fullName>
        <label>Require1</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Require2__c</fullName>
        <label>Require2</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isRequireFilled__c</fullName>
        <description>Check Require 1 and require 2 null or not</description>
        <formula>Require1__c == null &amp;&amp; Require2__c == null</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>isRequireFilled</label>
        <type>Checkbox</type>
    </fields>
    <label>ImportDemoObj</label>
    <nameField>
        <label>ImportDemoObj Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ImportDemoObjs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Check_Require_1_And_Require_2</fullName>
        <active>true</active>
        <description>Check require field 1 and 2</description>
        <errorConditionFormula>Require1__c == null || Require2__c == null</errorConditionFormula>
        <errorMessage>Require 1 and Require 2 cannot be null</errorMessage>
    </validationRules>
</CustomObject>